# opengl

./: .gitignore  CMakeLists.txt  Makefile  README.md  opengl
ext/: glad.c
include/: camera.h  shader.h
include/glad/: glad.h
shaders/: learn.frag  learn.vert
src/: camera.cpp  main.cpp  shader.cpp
